# quant-github-scout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
output/: latest_digest.md
top_quant_gits/: __init__.py  categories.py  config.py  digest.py  github_client.py  main.py  models.py  publication.py  ranker.py  store.py  telegram_delivery.py
